--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.21)
 PROJECT(image-class)
 
+set (CMAKE_CXX_STANDARD 17)    #std::clamp 
+
 # Froned upon way to globally set options on all targets
 if(MSVC)
     add_compile_options(/W4)
@@ -12,5 +14,23 @@ else()
     add_link_options(-fsanitize=address)
 endif()
 
-add_executable(main src/main.cpp src/image.hpp src/kernels.hpp)
-target_link_libraries(main opencv_imgcodecs opencv_core opencv_highgui)
+
+#OpenCV 4.7.0 (older versions hasn't been tested)
+find_package(OpenCV 4.7.0 REQUIRED COMPONENTS opencv_imgcodecs opencv_highgui opencv_core)
+
+include_directories(${OpenCV_INCLUDE_DIRS})
+#executable for serial-part
+add_executable(main src/main.cpp src/image.hpp src/SerialKernels.hpp)
+target_link_libraries(main PUBLIC ${OpenCV_LIBS})
+
+
+
+#test stage
+#executable for SYCL-part - OpenSYCL config file is hipSYCL - https://github.com/OpenSYCL/OpenSYCL/blob/develop/doc/using-hipsycl.md
+#find_package(hipSYCL 0.9.4 REQUIRED)           #cmake .. -DHIPSYCL_TARGETS="omp;cuda-nvcxx"
+
+
+#add_executable(syclmain src/SYCLmain.cpp src/image.hpp)
+#add_sycl_to_target(TARGET syclmain
+#                   SOURCES src/SYCLmain.cpp)
+#target_link_libraries(syclmain PUBLIC ${OpenCV_LIBS})
